--- a/resources/sass/main.css
+++ b/resources/sass/main.css
@@ -98,3 +98,16 @@ a:hover{
 .service-block img {
     margin-right: 15px;
 }
+
+.inactive {
+    width: 100%;
+    height: 100%;
+    z-index: 999;
+    display: none;
+    position: absolute;
+    background: #eeeeee9e;
+}
+
+.show{
+    display: block;
+}
